--- a/index.html
+++ b/index.html
@@ -1,27 +1,9 @@
 <!DOCTYPE html>
-ngrok http 8000
-
 <html>
   <head>
     <meta charset="utf-8">
     <title>Terminal</title>
-    <style>
-      /* Add some styling to make the website look like a terminal */
-      body {
-        font-family: monospace;
-        background-color: black;
-        color: white;
-      }
-      .prompt {
-        color: green;
-      }
-      .command {
-        color: yellow;
-      }
-      .output {
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Add some content to the terminal -->
@@ -33,5 +15,3 @@ ngrok http 8000
     </div>
   </body>
 </html>
-
-
