layout, copy, font, etc

--- a/index.html
+++ b/index.html
@@ -21,26 +21,53 @@
     <link rel="canonical" href="#">
     <link rel="icon" type="image/png" href="#" sizes="48x48">
     <!-- PERFORMANCE -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Labrada:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
     <link rel="preload" as="style" href="style.css">
     <link rel="stylesheet" href="style.css">
     <!-- TITLE -->
-    <title>Flow: Free Landing Page Template from Uisual</title>
+    <title>not remoremote | aka notre</title>
   </head>
   <body>
     <header role="banner" class="ui-section-header">
       <div class="ui-layout-container">
         <div class="ui-section-header__layout ui-layout-flex">
           <!-- LOGO -->
-          <a href="#" role="link" aria-label="#">
-            <svg viewBox="0 0 18 18" height="18" width="18" role="img" aria-label="#">
-              <path fill="#353535" d="M0 0h4.5v9a4.5 4.5 0 109 0V6H18v3A9 9 0 110 9V0zm18 4.5V0h-4.5v4.5H18z"/>
+          <a class="logo" href="" role="link" aria-label="#">
+            <svg width="118" height="119" viewBox="0 0 118 119" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M59.0004 116.928C47.5426 116.931 36.3415 113.536 26.814 107.172C17.2865 100.807 9.86081 91.7598 5.47642 81.1742C1.09203 70.5885 -0.0540403 58.9402 2.1832 47.7031C4.42044 36.4659 9.94046 26.1448 18.0449 18.0456C28.9067 7.18413 43.6383 1.08232 58.999 1.08252C74.3596 1.08272 89.0911 7.18492 99.9526 18.0467C110.814 28.9085 116.916 43.6401 116.916 59.0008C116.915 74.3615 110.813 89.0929 99.9515 99.9544C94.587 105.351 88.2054 109.63 81.1762 112.543C74.1469 115.457 66.6095 116.947 59.0004 116.928Z" fill="#100070"/>
+              <path d="M59.0011 2.16478C73.0455 2.18365 86.5824 7.41817 96.9858 16.853C107.389 26.2877 113.918 39.2503 115.305 53.226C116.692 67.2018 112.838 81.1946 104.492 92.4902C96.1462 103.786 83.9022 111.579 70.1355 114.358C56.3687 117.137 42.0605 114.703 29.9863 107.53C17.912 100.356 8.93252 88.954 4.78954 75.5345C0.64656 62.115 1.63545 47.6351 7.56438 34.9035C13.4933 22.1719 23.9396 12.0961 36.877 6.63072C43.876 3.66828 51.401 2.1493 59.0011 2.16478ZM59.0011 0C26.4168 0 0 26.4103 0 58.9989C0 91.5875 26.4146 118.011 59.0011 118.011C91.5875 118.011 118 91.6005 118 59.0097C118 26.419 91.5832 0 59.0011 0Z" fill="#100070"/>
+              <path d="M59.0001 115.361C41.1471 115.361 29.5591 107.351 27.7536 106.031C26.9743 103.628 26.983 102.807 27.009 100.547C27.009 100.078 27.009 99.5517 27.009 98.9455C27.009 80.9172 41.6753 66.2573 59.6971 66.2573C77.7189 66.2573 92.3853 80.9237 92.3853 98.9455C92.3853 99.9023 92.42 100.61 92.4459 101.177C92.5087 102.491 92.5369 103.08 92.0519 104.808C90.0387 106.288 76.8573 115.361 59.0001 115.361Z" fill="white"/>
+              <g filter="url(#filter0_d_11480_10396)">
+              <path d="M79.8085 75.2181C90.9077 64.1188 90.9077 46.1234 79.8085 35.0241C68.7092 23.9249 50.7138 23.9249 39.6145 35.0241C28.5153 46.1234 28.5153 64.1188 39.6145 75.2181C50.7138 86.3173 68.7092 86.3173 79.8085 75.2181Z" fill="white"/>
+              </g>
+              <path d="M65.9971 48.1877C65.9971 48.1877 67.8002 51 70.8885 51C73.9768 51 75.9971 48 75.9971 48" fill="white"/>
+              <path d="M65.9971 48.1877C65.9971 48.1877 67.8002 51 70.8885 51C73.9768 51 75.9971 48 75.9971 48" stroke="#100070" stroke-opacity="0.2" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
+              <path d="M41.9971 48.1877C41.9971 48.1877 43.8002 51 46.8885 51C49.9768 51 51.9971 48 51.9971 48" fill="white"/>
+              <path d="M41.9971 48.1877C41.9971 48.1877 43.8002 51 46.8885 51C49.9768 51 51.9971 48 51.9971 48" stroke="#100070" stroke-opacity="0.2" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
+              <path d="M53.6362 72.1477C53.6362 72.1477 55.8292 74.0441 59.5742 74.0441C61.8076 74.0464 63.9837 73.3374 65.7871 72.02" fill="white"/>
+              <path d="M53.6362 72.1477C53.6362 72.1477 55.8292 74.0441 59.5742 74.0441C61.8076 74.0464 63.9837 73.3374 65.7871 72.02" stroke="#100070" stroke-opacity="0.2" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
+              <path d="M59.7102 53.4785L56.8311 62.3173L61.1628 64.521" fill="white"/>
+              <path d="M59.7102 53.4785L56.8311 62.3173L61.1628 64.521" stroke="#100070" stroke-opacity="0.2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <defs>
+              <filter id="filter0_d_11480_10396" x="17.29" y="23.6997" width="84.8428" height="84.8428" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+              <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+              <feOffset dy="11"/>
+              <feGaussianBlur stdDeviation="7"/>
+              <feComposite in2="hardAlpha" operator="out"/>
+              <feColorMatrix type="matrix" values="0 0 0 0 0.235294 0 0 0 0 0.568627 0 0 0 0 0.901961 0 0 0 0.6 0"/>
+              <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_11480_10396"/>
+              <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_11480_10396" result="shape"/>
+              </filter>
+              </defs>
             </svg>
           </a>
           <!-- MENU -->
-          <a href="#" role="link" aria-label="#">
-            <svg viewBox="0 0 24 24" height="18" width="18" fill="none" stroke="#353535" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" role="img" aria-label="#">
-              <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"/>
+          <a class="maison-dot-work" href="https://maison.work/en" role="link" aria-label="#">
+            <svg width="55" height="36" viewBox="0 0 55 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3.50136 14.4993C1.56481 14.4993 0.000671387 16.0138 0.000671387 17.9006V18.0744C0.000671387 19.9613 1.56481 21.4758 3.50136 21.4758C5.43791 21.4758 7.00205 19.9613 7.00205 18.0744V17.9006C7.00205 16.0138 5.43791 14.4993 3.50136 14.4993Z" fill="#100071"/>
+              <rect x="19.0007" width="36" height="36" rx="6" fill="#100071"/>
+              <path d="M41.7427 14.5117H40.9979L40.6007 14.8593L39.5331 18.8814C39.4586 19.1048 39.3593 20.0483 39.3593 20.0483C39.3593 20.2717 39.0614 20.2469 39.0614 20.0483C39.0614 20.0483 38.9621 19.1296 38.8876 18.8814L37.8945 14.8841L37.4972 14.5365H36.5041L36.1069 14.8841L35.1138 18.8814C35.0393 19.1296 34.94 20.0483 34.94 20.0483C34.94 20.2469 34.6421 20.2717 34.6421 20.0483C34.6421 20.0483 34.5179 19.1296 34.4683 18.8814L33.4255 14.8593L33.0283 14.5117H32.2834L31.9359 14.8593L33.8476 21.1407L34.2448 21.4883H35.2379L35.6352 21.1407L36.7772 17.2676C36.8517 16.9945 36.9014 16.6965 36.9014 16.4234V15.9269C36.9014 15.7531 37.1 15.7531 37.1 15.9269V16.4234C37.1 16.7214 37.1496 16.9945 37.2241 17.2676L38.3662 21.1407L38.7634 21.4883H39.7565L40.1538 21.1407L42.0655 14.8593L41.7179 14.5117H41.7427Z" fill="white"/>
             </svg>
           </a>
         </div>
@@ -51,24 +78,15 @@
         <div class="ui-layout-container">
           <!-- COPYWRITING -->
           <div class="ui-layout-column-6 ui-layout-column-center">
-            <h1>Design better.</h1>
-            <p class="ui-text-intro">Lorem ipsum dolor sit amet, consectetur lit, enimad eiusmod tempor incididunt ut labore et dolore magna aliqua ullamco laboris nisi.</p>
+            <h1>remoremote</h1>
+            <p class="ui-text-intro">Psst... Want to be in the know about my latest creations? Don't miss out on the fun - join my waitlist! As part of my inner circle, you'll be the first to know about my latest work. Just drop your email below and let's stay connected.</p>
             <!-- CTA -->
             <div class="ui-component-cta ui-layout-flex">
-              <!-- APP STORE -->
-              <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary ui-component-button-icon">
-                <svg fill="none" viewBox="0 0 16 16" height="14" width="14">
-                  <path fill="#fff" d="M10.833 0c.143.972-.253 1.924-.775 2.598-.558.722-1.52 1.28-2.453 1.252-.17-.93.266-1.89.796-2.534C8.983.605 9.98.06 10.833 0zm2.8 13.679c.481-.737.66-1.108 1.034-1.94-2.714-1.032-3.149-4.89-.463-6.371-.82-1.027-1.97-1.623-3.057-1.623-.783 0-1.32.204-1.807.39-.407.155-.78.297-1.232.297-.49 0-.924-.156-1.378-.318-.499-.18-1.022-.367-1.672-.367-1.22 0-2.517.745-3.34 2.019-1.157 1.794-.96 5.167.916 8.04.67 1.028 1.566 2.183 2.738 2.194.486.005.81-.14 1.16-.298.4-.18.836-.375 1.59-.379.76-.004 1.188.194 1.583.376.341.157.658.303 1.14.298 1.172-.01 2.118-1.29 2.788-2.318z"/>
-                </svg>
-                <span>Download</span>
-              </a>
-              <!-- PLAY STORE -->
-              <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary ui-component-button-icon">
-                <svg fill="none" viewBox="0 0 16 16" height="14" width="14">
-                  <path fill="#fff" d="M1.478 0l7.998 8-7.997 8A.783.783 0 011 15.277V.723A.785.785 0 011.478 0zm8.553 8.555l1.808 1.808-8.59 4.974 6.782-6.782zm2.513-2.511l2.204 1.277a.786.786 0 010 1.358l-2.205 1.277L10.586 8l1.958-1.956zM3.249.663l8.591 4.973-1.809 1.809L3.25.663z"/>
-                </svg>
-                <span>Download</span>
-              </a>
+              <form action="#" class="ui-component-form ui-layout-grid ui-layout-column-4">
+                <input type="email" placeholder="Email" class="ui-component-input ui-component-input-medium" required>
+                <button type="submit" class="ui-component-button ui-component-button-medium ui-component-button-primary">Join Waitlist</button>
+              </form>
+              <p class="ui-text-note"><small>Available on the internet, probably</small></p>
             </div>
           </div>
         </div>
@@ -76,93 +94,86 @@
       <section class="ui-section-feature">
         <div class="ui-layout-container">
           <!-- FEATURE -->
+          <!-- 1 -->
           <div class="ui-section-feature__layout ui-layout-grid ui-layout-grid-2">
             <div class="ui-component-card">
               <div class="ui-component-card--info">
-                <h3>Nice Feature</h3>
-                <p class="ui-text-intro">Lorem ipsum dolor sit amet consec tetur adipiscing elit eiusmod.</p>
+                <h3>Cool feature!</h3>
+                <p class="ui-text-intro">At the moment this is a placeholder for a cool feature description</p>
               </div>
-              <img src="https://res.cloudinary.com/uisual/image/upload/assets/devices/iphone-t.png" loading="lazy" alt="#">
+              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
             </div>
+          <!-- 2 -->
             <div class="ui-component-card">
-              <img src="https://res.cloudinary.com/uisual/image/upload/assets/devices/iphone-b.png" loading="lazy" alt="#">
+              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
               <div class="ui-component-card--info">
-                <h3>Nice Feature</h3>
-                <p class="ui-text-intro">Lorem ipsum dolor sit amet consec tetur adipiscing elit eiusmod.</p>
+                <h3>Awesome feature!</h3>
+                <p class="ui-text-intro">I promise I am not opsessed with features, I just needed titles for this</p>
               </div>
             </div>
-            <div class="ui-component-card">
-              <div class="ui-component-card--info">
-                <h3>Nice Feature</h3>
-                <p class="ui-text-intro">Lorem ipsum dolor sit amet consec tetur adipiscing elit eiusmod.</p>
-              </div>
-              <img src="https://res.cloudinary.com/uisual/image/upload/assets/devices/iphone-t.png" loading="lazy" alt="#">
-            </div>
-            <div class="ui-component-card">
-              <img src="https://res.cloudinary.com/uisual/image/upload/assets/devices/iphone-b.png" loading="lazy" alt="#">
-              <div class="ui-component-card--info">
-                <h3>Nice Feature</h3>
-                <p class="ui-text-intro">Lorem ipsum dolor sit amet consec tetur adipiscing elit eiusmod.</p>
-              </div>
-            </div>
+          <!-- 3 -->
             <div class="ui-component-card">
               <div class="ui-component-card--info">
-                <h3>Nice Feature</h3>
-                <p class="ui-text-intro">Lorem ipsum dolor sit amet consec tetur adipiscing elit eiusmod.</p>
+                <h3>Exciting addition</h3>
+                <p class="ui-text-intro">This might be very exciting. Depending on what you think exciting is...</p>
               </div>
-              <img src="https://res.cloudinary.com/uisual/image/upload/assets/devices/iphone-t.png" loading="lazy" alt="#">
+              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
             </div>
+          <!-- 4 -->           
             <div class="ui-component-card">
-              <img src="https://res.cloudinary.com/uisual/image/upload/assets/devices/iphone-b.png" loading="lazy" alt="#">
+              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
+              <div class="ui-component-card--info">
+                <h3>Great upgrade!</h3>
+                <p class="ui-text-intro">Yeah, upgrades. cool. I am fairly creative but donno what to write here</p>
+              </div>
+            </div>
+          <!-- 5 -->
+            <div class="ui-component-card">
+              <div class="ui-component-card--info">
+                <h3>Impressive addition!</h3>
+                <p class="ui-text-intro">Nothing has impressed me more than me thinking I will add six images someday</p>
+              </div>
+              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
+            </div>
+          <!-- 6 -->
+            <div class="ui-component-card">
+              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
               <div class="ui-component-card--info">
                 <h3>Nice Feature</h3>
-                <p class="ui-text-intro">Lorem ipsum dolor sit amet consec tetur adipiscing elit eiusmod.</p>
+                <p class="ui-text-intro">Nice is the big sister of something. But I bet this "feature" is nice</p>
               </div>
             </div>
+
           </div>
         </div>
       </section>
-      <section class="ui-section-close">
-        <div class="ui-layout-container">
-          <div class="ui-layout-column-6 ui-layout-column-center">
-            <!-- LOGO -->
-            <svg viewBox="0 0 48 48" height="48" width="48" class="ui-section-close--logo">
-              <rect fill="#353535" height="48" width="48" rx="8"/>
-              <path fill="#FFF" d="M12 13h6v12a6 6 0 0012 0v-4h6v4c0 6.627-5.373 12-12 12s-12-5.373-12-12V13zm24 6v-6h-6v6h6z"/>
-            </svg>
-            <!-- COPYWRITING -->
-            <h2>Improve your work.</h2>
-            <p class="ui-text-intro">Lorem ipsum dolor sit amet consectetur.</p>
-            <!-- CTA -->
-            <div class="ui-component-cta ui-layout-flex">
-              <!-- APP STORE -->
-              <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary ui-component-button-icon">
-                <svg fill="none" viewBox="0 0 16 16" height="14" width="14">
-                  <path fill="#fff" d="M10.833 0c.143.972-.253 1.924-.775 2.598-.558.722-1.52 1.28-2.453 1.252-.17-.93.266-1.89.796-2.534C8.983.605 9.98.06 10.833 0zm2.8 13.679c.481-.737.66-1.108 1.034-1.94-2.714-1.032-3.149-4.89-.463-6.371-.82-1.027-1.97-1.623-3.057-1.623-.783 0-1.32.204-1.807.39-.407.155-.78.297-1.232.297-.49 0-.924-.156-1.378-.318-.499-.18-1.022-.367-1.672-.367-1.22 0-2.517.745-3.34 2.019-1.157 1.794-.96 5.167.916 8.04.67 1.028 1.566 2.183 2.738 2.194.486.005.81-.14 1.16-.298.4-.18.836-.375 1.59-.379.76-.004 1.188.194 1.583.376.341.157.658.303 1.14.298 1.172-.01 2.118-1.29 2.788-2.318z"/>
-                </svg>
-                <span>Download</span>
-              </a>
-              <!-- PLAY STORE -->
-              <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary ui-component-button-icon">
-                <svg fill="none" viewBox="0 0 16 16" height="14" width="14">
-                  <path fill="#fff" d="M1.478 0l7.998 8-7.997 8A.783.783 0 011 15.277V.723A.785.785 0 011.478 0zm8.553 8.555l1.808 1.808-8.59 4.974 6.782-6.782zm2.513-2.511l2.204 1.277a.786.786 0 010 1.358l-2.205 1.277L10.586 8l1.958-1.956zM3.249.663l8.591 4.973-1.809 1.809L3.25.663z"/>
-                </svg>
-                <span>Download</span>
-              </a>
-            </div>
+    </section>
+    <section class="ui-section-close">
+      <div class="ui-layout-container">
+        <div class="ui-layout-column-6 ui-layout-column-center">
+          <h2>Sign Up for What Could Be <br>(Or Might Not Be)</h2>
+          <p class="ui-text-intro">Leaving so soon? Wait, let me guess, you're too cool for my exclusive waitlist, right? I mean, it's not like I'm ever going to send anything out anyway. But hey, if you want to be part of a non-existent newsletter, drop your email below. It won't hurt to pretend.</p>
+          <!-- CTA -->
+          <div class="ui-component-cta ui-layout-flex">
+            <form action="#" class="ui-component-form ui-layout-grid ui-layout-column-4">
+              <input type="email" placeholder="Email" class="ui-component-input ui-component-input-medium" required>
+              <button type="submit" class="ui-component-button ui-component-button-medium ui-component-button-primary">Join Waitlist</button>
+            </form>
+            <p class="ui-text-note"><small>Not available yet but why do something if you can wait.</small></p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
     </main>
     <footer role="contentinfo" class="ui-section-footer">
       <div class="ui-layout-container">
         <div class="ui-section-footer__layout ui-layout-flex">
           <!-- COPYRIGHT -->
-          <p class="ui-section-footer--copyright ui-text-note"><small>&copy; 0000 Uisual</small></p>
+          <p class="ui-section-footer--copyright ui-text-note"><small>&copy; remoremote</small></p>
           <!-- MENU -->
-          <a href="#" role="link" aria-label="#" class="ui-text-note"><small>Features</small></a>
-          <a href="#" role="link" aria-label="#" class="ui-text-note"><small>Help</small></a>
-          <a href="#" role="link" aria-label="#" class="ui-text-note"><small>Terms</small></a>
+          <a href="#" role="link" aria-label="#" class="ui-text-note footer-small"><small>Features</small></a>
+          <a href="#" role="link" aria-label="#" class="ui-text-note footer-small"><small>Help</small></a>
+          <a href="#" role="link" aria-label="#" class="ui-text-note footer-small"><small>Terms</small></a>
         </div>
       </div>
     </footer>
