--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <input type="email" placeholder="Email" class="ui-component-input ui-component-input-medium" required>
                 <button type="submit" class="ui-component-button ui-component-button-medium ui-component-button-primary">Join Waitlist</button>
               </form>
-              <p class="ui-text-note"><small>Available on the internet, probably</small></p>
+              <p class="ui-text-note"><small>just letting know, this whole waitlist thing is not working yet<br>Future copy: Available on the internet, probably</small></p>
             </div>
           </div>
         </div>
@@ -159,7 +159,7 @@
               <input type="email" placeholder="Email" class="ui-component-input ui-component-input-medium" required>
               <button type="submit" class="ui-component-button ui-component-button-medium ui-component-button-primary">Join Waitlist</button>
             </form>
-            <p class="ui-text-note"><small>Not available yet but why do something if you can wait.</small></p>
+            <p class="ui-text-note"><small>just letting know again, this whole waitlist thing is not working yet lol<br>Future copy: Not available yet but why do something if you can wait.</small></p>
           </div>
         </div>
       </div>
