--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
             <p class="ui-text-intro">Psst... Want to be in the know about my latest creations? Don't miss out on the fun - join my waitlist! As part of my inner circle, you'll be the first to know about my latest work. Just drop your email below and let's stay connected.</p>
             <!-- CTA -->
             <div class="ui-component-cta ui-layout-flex">
-              <form action="#" class="ui-component-form ui-layout-grid ui-layout-column-4" method="POST" data-netlify="true">
+              <form class="ui-component-form ui-layout-grid ui-layout-column-4" name="contact" method="POST" data-netlify="true">
                 <input type="email" placeholder="Email" class="ui-component-input ui-component-input-medium" required>
                 <button type="submit" class="ui-component-button ui-component-button-medium ui-component-button-primary">Join Waitlist</button>
-                <input type="hidden" name="form-name" value="contact">
               </form>
               <p class="ui-text-note"><small>just letting know, this whole waitlist thing is not working yet<br>Future copy: Available on the internet, probably</small></p>
             </div>
@@ -128,22 +127,22 @@
                 <p class="ui-text-intro">Yeah, upgrades. cool. I am fairly creative but donno what to write here</p>
               </div>
             </div>
-          <!-- 5 -->
+          <!-- 5 
             <div class="ui-component-card">
               <div class="ui-component-card--info">
                 <h3>Impressive addition!</h3>
                 <p class="ui-text-intro">Nothing has impressed me more than me thinking I will add six images someday</p>
               </div>
               <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
-            </div>
-          <!-- 6 -->
+            </div> -->
+          <!-- 6 
             <div class="ui-component-card">
               <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
               <div class="ui-component-card--info">
                 <h3>Nice Feature</h3>
                 <p class="ui-text-intro">Nice is the big sister of something. But I bet this "feature" is nice</p>
               </div>
-            </div>
+            </div> -->
 
           </div>
         </div>
