--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <!-- CTA -->
             <div class="ui-component-cta ui-layout-flex">
               <form class="ui-component-form ui-layout-grid ui-layout-column-4" name="contact" method="POST" data-netlify="true">
-                <input type="email" placeholder="Email" class="ui-component-input ui-component-input-medium" required>
+                <input type="email" name="email" placeholder="Email" class="ui-component-input ui-component-input-medium" required>
                 <button type="submit" class="ui-component-button ui-component-button-medium ui-component-button-primary">Join Waitlist</button>
               </form>
               <p class="ui-text-note"><small>just letting know, this whole waitlist thing is not working yet<br>Future copy: Available on the internet, probably</small></p>
