--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                 <input type="email" name="email" placeholder="Email" class="ui-component-input ui-component-input-medium" required>
                 <button type="submit" class="ui-component-button ui-component-button-medium ui-component-button-primary">Join Waitlist</button>
               </form>
+              <p class="ui-text-note"><small>Available on the internet, probably</small></p>
               <div id="success-message" class="hidden">
                 <p>Thanks I guess :-)</p>
               </div>
-              <p class="ui-text-note"><small>Available on the internet, probably</small></p>
             </div>
           </div>
         </div>
@@ -158,11 +158,14 @@
           <p class="ui-text-intro">Leaving so soon? Wait, let me guess, you're too cool for my exclusive waitlist, right? I mean, it's not like I'm ever going to send anything out anyway. But hey, if you want to be part of a non-existent newsletter, drop your email below. It won't hurt to pretend.</p>
           <!-- CTA -->
           <div class="ui-component-cta ui-layout-flex">
-            <form class="ui-component-form ui-layout-grid ui-layout-column-4" name="contact" method="POST" data-netlify="true">
+            <form class="ui-component-form ui-layout-grid ui-layout-column-4" name="contact_footer" method="POST" data-netlify="true">
               <input type="email" name="email" placeholder="Email" class="ui-component-input ui-component-input-medium" required>
               <button type="submit" class="ui-component-button ui-component-button-medium ui-component-button-primary">Join Waitlist</button>
             </form>
             <p class="ui-text-note"><small>Not available yet but why do something if you can wait.</small></p>
+            <div id="success-message" class="hidden">
+              <p>cheers for the sub</p>
+            </div>
           </div>
         </div>
       </div>
