content and change in styling

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <!-- COPYWRITING -->
           <div class="ui-layout-column-6 ui-layout-column-center">
             <h1>how did you find this?</h1>
-            <p class="ui-text-intro">Psst... Want to be in the know about my latest creations? Don't miss out on the fun - join my waitlist! As part of my inner circle, you'll be the first to know about my latest work. Just drop your email below and let's stay connected.</p>
+            <p class="ui-text-intro">Psst... Want to be in the know about my latest creations? Don't miss out on the fun - join my waitlist! As part of my inner circle, you'll be the first to know about my latest work. Not going to lie, I am surprised that you found this.</p>
             <!-- CTA -->
             <div class="ui-component-cta ui-layout-flex">
               <form class="ui-component-form ui-layout-grid ui-layout-column-4" name="contact" method="POST" data-netlify="true">
@@ -101,51 +101,35 @@
           <div class="ui-section-feature__layout ui-layout-grid ui-layout-grid-2">
             <div class="ui-component-card">
               <div class="ui-component-card--info">
-                <h3>Cool feature!</h3>
-                <p class="ui-text-intro">At the moment this is a placeholder for a cool feature description</p>
+                <h3>Design</h3>
+                <p class="ui-text-intro">Classically trained even. Nowadays, mainly in UI/UX design. But I speak "Graphic Design" too.</p>
               </div>
-              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
+              <img src="/assets/placeholder-img.png" loading="lazy" alt="#" class="top">
             </div>
           <!-- 2 -->
             <div class="ui-component-card">
-              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
+              <img src="/assets/placeholder-img.png" loading="lazy" alt="#" class="bottom">
               <div class="ui-component-card--info">
-                <h3>Awesome feature!</h3>
-                <p class="ui-text-intro">I promise I am not opsessed with features, I just needed titles for this</p>
+                <h3>Web dev</h3>
+                <p class="ui-text-intro">The first website I created was in primary school with my dad. I've lost count since then. <a href="https://github.com/remoremote">github</a></p>
               </div>
             </div>
           <!-- 3 -->
             <div class="ui-component-card">
               <div class="ui-component-card--info">
-                <h3>Exciting addition</h3>
-                <p class="ui-text-intro">This might be very exciting. Depending on what you think exciting is...</p>
+                <h3>Business</h3>
+                <p class="ui-text-intro">Look at me, I studied. Textile Business Management. Fun fact: textiles are everywhere.</p>
               </div>
-              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
+              <img src="/assets/placeholder-img.png" loading="lazy" alt="#" class="top">
             </div>
           <!-- 4 -->           
             <div class="ui-component-card">
-              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
+              <img src="/assets/placeholder-img.png" loading="lazy" alt="#" class="bottom">
               <div class="ui-component-card--info">
-                <h3>Great upgrade!</h3>
-                <p class="ui-text-intro">Yeah, upgrades. cool. I am fairly creative but donno what to write here</p>
+                <h3>Product</h3>
+                <p class="ui-text-intro">I didn't plan this, but turns out the combination of business, design and tech is handy as pm.</p>
               </div>
             </div>
-          <!-- 5 
-            <div class="ui-component-card">
-              <div class="ui-component-card--info">
-                <h3>Impressive addition!</h3>
-                <p class="ui-text-intro">Nothing has impressed me more than me thinking I will add six images someday</p>
-              </div>
-              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
-            </div> -->
-          <!-- 6 
-            <div class="ui-component-card">
-              <img src="/assets/placeholder-img.png" loading="lazy" alt="#">
-              <div class="ui-component-card--info">
-                <h3>Nice Feature</h3>
-                <p class="ui-text-intro">Nice is the big sister of something. But I bet this "feature" is nice</p>
-              </div>
-            </div> -->
 
           </div>
         </div>
