updates on forms

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="ui-layout-container">
           <!-- COPYWRITING -->
           <div class="ui-layout-column-6 ui-layout-column-center">
-            <h1>how did you find this?</h1>
+            <h1>How did you find this?</h1><h3>(This is my placeholder site)</h3>
             <p class="ui-text-intro">Psst... Want to be in the know about my latest creations? Don't miss out on the fun - join my waitlist! As part of my inner circle, you'll be the first to know about my latest work. Not going to lie, I am surprised that you found this.</p>
             <!-- CTA -->
             <div class="ui-component-cta ui-layout-flex">
@@ -88,7 +88,8 @@
               </form>
               <p class="ui-text-note"><small>Available on the internet, probably</small></p>
               <div id="success-message" class="hidden">
-                <p>Thanks I guess :-)</p>
+                <p>Thanks I guess :-), don't expect anything new anytime soon. 
+                <br>Building <a href="https://maison.work/en">maison.work</a> for the next couple of years/decades.</p>
               </div>
             </div>
           </div>
